update requirments and vcp notebook.

--- a/vcp.ipynb
+++ b/vcp.ipynb
@@ -39,32 +39,18 @@
         "id": "ow60_reEhtCh",
         "outputId": "3c4634bd-9e08-40f8-e72b-ee10da5b038d"
       },
-      "outputs": [
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "83b489b0bc3b4df8bd6e58557800489a",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Fetching 13 files:   0%|          | 0/13 [00:00<?, ?it/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        }
-      ],
+      "outputs": [],
       "source": [
         "import VCPilot\n",
         "import os\n",
         "import importlib\n",
+        "import streamlit as st\n",
         "importlib.reload(VCPilot)\n",
         "\n",
-        "os.environ[\"OPENAI_API_BASE\"]=\"\"\n",
-        "os.environ[\"OPENAI_API_KEY\"] =\"\"\n",
-        "os.environ[\"QDRANT_URL\"] =\"\"\n",
-        "os.environ[\"QDRANT_API_KEY\"] =\"\"\n",
+        "os.environ[\"QDRANT_URL\"] = st.secrets.qdrant.url\n",
+        "os.environ[\"QDRANT_API_KEY\"] = st.secrets.qdrant.api_key\n",
+        "os.environ[\"OPENAI_API_BASE\"] = st.secrets.fireworks.base_url\n",
+        "os.environ[\"OPENAI_API_KEY\"] = st.secrets.fireworks.api_key\n",
         "\n",
         "vcp = VCPilot.VCPilot()\n",
         "\n"
@@ -72,7 +58,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -80,15 +66,7 @@
         "id": "bXLkGcuoidPj",
         "outputId": "149c3c45-f774-48a4-d4a4-0103bdfb73d2"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "['Dog behavior analysis and recognition using computer vision: Investigating the ability to accurately identify and interpret canine behaviors, emotions, and actions through AI-powered image analysis.', 'Natural language understanding and processing for dog barks and sounds: Examining the feasibility of developing NLP algorithms to understand and respond to dog barks, whines, and other vocalizations.', 'User engagement and interaction patterns in animal-centric social media platforms: Analyzing existing data on user behavior and preferences in similar platforms to predict potential challenges and opportunities for a Facebook for dogs.', 'Data privacy and security in pet-related social media platforms: Researching potential concerns and best practices for protecting user data and privacy in a social media platform focused on pets.', 'Ethical considerations and societal impact of a dog-centric social media platform: Exploring the ethical implications of such a platform, including potential impacts on animal welfare, user behavior, and responsible pet ownership.']\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "proposal = \"facebook for dogs\"\n",
         "tasks = vcp.get_research_tasks(proposal=proposal)\n",
@@ -97,7 +75,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "id": "GzM6thqsi5pg"
       },
@@ -109,7 +87,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -117,21 +95,7 @@
         "id": "tXxNGWYqj9JO",
         "outputId": "718e17c8-e616-4ac0-8fc1-5727a9ea4fa4"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Conclusion: The AI startup focused on developing a \"Facebook for Dogs\" faces significant technology risks, primarily due to the limited availability of labeled data, challenges in handling occlusions, lighting variations, and breed-specific differences, and the need to create robust and accurate models for various canine behaviors, emotions, and actions. Ethical considerations and regulations for AI use in animal behavior analysis further complicate the landscape. To mitigate these risks, the startup should leverage transfer learning, multi-modal approaches, and engage with the research community to address ethical concerns.\n",
-            "\n",
-            "Final Thoughts: Investing in this deep tech AI startup is like adopting a shelter dog—there's a lot of potential for a rewarding experience, but it requires patience, commitment, and a solid plan to address the unexpected challenges.\n",
-            "\n",
-            "Rating: 6.5/10\n",
-            "\n",
-            "Emoji: 🐾💡🤝\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "highlights = vcp.generate_highlights(proposal, citations, summaries)\n",
         "followups = vcp.get_followup_questions(highlights)\n",
