--- a/vcp.ipynb
+++ b/vcp.ipynb
@@ -258,13 +258,13 @@
         "def get_indexer_and_retriever():\n",
         "  # Set up Qdrant client for vector store\n",
         "    qdrant_client = QdrantClient(\n",
-        "        url='https://56ab7b97-f618-4723-9b13-93e0b140c31b.us-east4-0.gcp.cloud.qdrant.io:6333',\n",
-        "        api_key=\"lBfwfnQqD1ogXoZ86-X8wFWigRoZwZk1ydOYJf4pv6WJyLQmm7jqDg\",\n",
+        "        url='',\n",
+        "        api_key=\"\",\n",
         "    )\n",
         "\n",
         "    # Embedding model for vector insertion\n",
         "    os.environ[\"OPENAI_API_BASE\"]=\"https://api.fireworks.ai/inference/v1\"\n",
-        "    os.environ[\"OPENAI_API_KEY\"] =\"soXg5G0dRAywvZyyLIOLwjKBfe6S1kqV6lC2KdEcVbWqlxM4\"\n",
+        "    os.environ[\"OPENAI_API_KEY\"] =\"\"\n",
         "    embed_model = FastEmbedEmbedding(model_name=\"nomic-ai/nomic-embed-text-v1.5\")\n",
         "    Settings.embed_model = embed_model\n",
         "\n",
@@ -369,7 +369,7 @@
         "    ) -> str:\n",
         "        client = openai.OpenAI(\n",
         "            base_url = \"https://api.fireworks.ai/inference/v1\",\n",
-        "            api_key=\"soXg5G0dRAywvZyyLIOLwjKBfe6S1kqV6lC2KdEcVbWqlxM4\",\n",
+        "            api_key=\"\",\n",
         "        )\n",
         "        response = client.chat.completions.create(\n",
         "          model=\"accounts/fireworks/models/mixtral-8x7b-instruct\",\n",
@@ -582,7 +582,7 @@
         "    ) -> str:\n",
         "        client = openai.OpenAI(\n",
         "            base_url = \"https://api.fireworks.ai/inference/v1\",\n",
-        "            api_key=\"soXg5G0dRAywvZyyLIOLwjKBfe6S1kqV6lC2KdEcVbWqlxM4\",\n",
+        "            api_key=\"\",\n",
         "        )\n",
         "        response = client.chat.completions.create(\n",
         "          model=\"accounts/fireworks/models/mixtral-8x7b-instruct\",\n",
